src/main/scala/grammar/grammar.txt
program         -> declaration* EOF
declaration     -> varDecl | statement
varDecl         -> 'var' identifier ('=' expression)? ";"
statement       -> exprStmt | printStmt | block
block           -> "{" declaration* "}"
exprStmt        -> expression_list
expression_list -> expression (',' expression_list)
expression      -> assignment
assignment      -> IDENTIFIER '=' assignment | equality
equality        -> comparison (('==' | '!=' comparison)*
comparison      -> term (('>' | '>=' | '<' | '<=') term)*
term            -> factor (("+" | "-") factor)*
factor          -> unary (("/" | "*") unary)*
unary           -> (("!" | "-") unary) | primary
primary         -> number | string | true | false | Nil | "(" expression ")" | IDENTIFIER
